k8s/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-data-services-api
  labels:
    type: data-services-api
spec:
  containers:
    - name: app-hotlink
      image: dherkyan/data-services-api:202501151512
      ports:
        - containerPort: 8080 # porta da aplicação
---
apiVersion: v1
kind: Service
metadata:
  name: service-data-services-api
spec:
  type: ClusterIP
  selector:
    type: data-services-api
  ports:
    - name: http
      targetPort: 8080 # porta da aplicação
      port: 8080 # porta da aplicação
#      nodePort: 30008 # porta que será exporta externamente
